[project]
name = "social-media-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "openai>=1.0.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
